[package]
name = "subdef"
version = "0.1.0"
edition = "2021"
description = "Expressive attribute macro to define nested structures"
rust-version = "1.68"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/subdef"
keywords = ["macros", "attribute", "nested", "serde", "nestify"]
categories = ["development-tools", "development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc", "rust-patterns"]
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
static_assertions = "1.1"

[lib]
proc-macro = true
